feat(storage): Optimize storage layer with buffered I/O and batch operations
Key improvements:
- Replace basic file operations with buffered I/O for better performance
- Implement configurable storage paths through StorageConfig class
- Add batch processing support with batchAdd and batchUpdate methods
- Create custom StorageException for better error handling
- Use try-with-resources pattern consistently for automatic resource management
- Implement proper directory existence checking before file operations
- Optimize file reading/writing with Java NIO operations
- Add comprehensive JavaDoc comments for better code documentation

Performance implications:
- Reduced I/O operations when adding or updating multiple records
- More efficient file streaming with BufferedWriter/BufferedReader
- Better resource management to prevent file handle leaks

These changes improve both the performance and maintainability of the
storage layer, especially when dealing